--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.4",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.3"
+    "expo": "^44.0.0",
+    "expo-constants": "~13.0.1",
+    "expo-status-bar": "~1.2.0",
+    "react": "17.0.1",
+    "react-native": "0.64.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
